--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 
 <body>
-    <header class="aaa">
+    <header class="header">
         <img src="./eisenhower-matrix.jpg">
         <a 
-        class="more_inf" 
+        class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
             Want more details?
         </a>
     </header>
 
-    <main class="centered-main-page-element">
+    <main class="main">
         <section id="topSectionForAddingElementToList">
             <label for="new-task">Add Item</label>
             <div class="task-row-wrapper">
                 <input id="new-task"class="task" type="text">
-                <button>Add</button>
+                <button class="add__button">Add</button>
             </div>
         </section>
         
@@ -34,8 +34,8 @@
                     <input type="checkbox">
                     <label class="task">Pay Bills</label>
                     <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
+                    <button class="edit__button">Edit</button>
+                    <button class="delete__button">
                         <img src="./remove.svg">
                     </button>
                 </li>
@@ -44,8 +44,8 @@
                     <input type="checkbox">
                     <label class="task">Go Shopping</label>
                     <input type="text" value="Go Shopping" class="task">
-                    <button class="edit">Save</button>
-                    <button class="delete">
+                    <button class="edit__button">Save</button>
+                    <button class="delete__button">
                         <img src="./remove.svg">
                     </button>
                 </li>
@@ -59,8 +59,8 @@
                     <input type="checkbox" checked>
                     <label class="task">See the Doctor</label>
                     <input type="text" class="task">
-                    <button class="edit">Edit</button>
-                    <button class="delete">
+                    <button class="edit__button">Edit</button>
+                    <button class="delete__button">
                         <img src="./remove.svg">
                     </button>
                 </li>
