fix(extended-1.2): add missing alt attributes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input type="text" class="task-list__input">
                     <button class="task-list__edit-button">Edit</button>
                     <button class="task-list__delete-button">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Remove Icon">
                     </button>
                 </li>
       
@@ -46,7 +46,7 @@
                     <input type="text" value="Go Shopping" class="task-list__input">
                     <button class="task-list__edit-button">Save</button>
                     <button class="task-list__delete-button">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Remove Icon">
                     </button>
                 </li>
             </ul>
@@ -61,7 +61,7 @@
                     <input type="text" class="task-list__input">
                     <button class="task-list__edit-button">Edit</button>
                     <button class="task-list__delete-button">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="Remove Icon">
                     </button>
                 </li>
             </ul>
