fix(extended-1.2): add missing alt attributes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__image" src="./eisenhower-matrix.jpg">
+        <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
         <a 
         class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower">
